--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.11.16",
+    "nodemon": "^2.0.7"
   }
 }
